--- a/defaultstyle.css
+++ b/defaultstyle.css
@@ -4,9 +4,9 @@
 
 
 p {
-    font-family: 'Arvo', serif;
+    font-family: Arvo, serif;
 }
 
 h1 {
-    font-family: 'Bowlby One', sans-serif;
+    font-family: Bowlby One, sans-serif;
 }
