more formatting and added about section

--- a/defaultstyle.css
+++ b/defaultstyle.css
@@ -3,11 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Bowlby+One&display=swap');
 
 body {
-    padding: 20px;
-}
-
-
-p {
+    padding: 0px 10px;
     font-family: Arvo, serif;
 }
 
@@ -15,9 +11,15 @@ h1 {
     font-family: Bowlby One, sans-serif;
 }
 
+h1.header {
+    font-size: 2.5em;
+    margin-top: 10px;
+    margin-bottom: -15px;
+}
+
+
 ul.navbar {
     list-style-type: none;
-    margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: blueviolet;
@@ -31,7 +33,7 @@ ul.navbar li a{
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 10px 10px;
     text-decoration: none;
 }
 
